syntax = "proto3";

package exocore.apps;

message Manifest {
    reserved 6;

    string name = 1;

    string version = 2;

    string public_key = 3;

    repeated ManifestSchema schemas = 4;

    ManifestModule module = 5;
}

message ManifestSchema {
    reserved 2;

    oneof source {
        string file = 1;
    }
}

message ManifestModule {
    string file = 1;

    string multihash = 2;
}